<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_diary_title" />

        <EditText
            android:id="@+id/etBodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_diary_body" />

        <EditText
            android:id="@+id/etPlaceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_creation_place" />

        <EditText
            android:id="@+id/dob"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select date" />

        <CheckBox
            android:id="@+id/cbIsPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_personal" />
        
        <Button
            android:id="@+id/btnSetPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_my_position"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>

